# idn

./: .gitignore  config.toml  index.html  robots.txt  sitemap.xml  style.css  worker.js
.github/workflows/: build-and-deploy.yml
content/: learn.md  privacy.md  review.md
content/lessons/: 01-sentence-structure.md  02-pronouns.md  03-greetings-and-farewells.md  04-verb-modifications.md  05-asking-questions.md  _index.md
data/: vocabs.txt
learn/: index.html
lessons/: index.html
lessons/01-basic-sentence-structure/: index.html
lessons/02-pronouns/: index.html
lessons/03-greetings-and-farewells/: index.html
lessons/04-verb-modification/: index.html
lessons/05-asking-questions/: index.html
pkg/: idn.js  idn_bg.wasm
privacy/: index.html
review/: index.html
static/: service_worker.js  style.css  worker.js
static/data/: vocabs.txt
templates/: base.html  index.html  learn.html  lesson.html  lessons.html  macros.html  privacy.html  review.html
templates/shortcodes/: id.html  pos.html  quiz.html  vocab.html
wasm/: .gitignore  Cargo.toml
wasm/src/: db.rs  lib.rs  ui.rs  utils.rs
