[package]
name = "idn"
version = "0.1.0"
authors = ["Cristian Kubis <github@tsunix.de>"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
# chrono = { version = "0.4.23", features = ["serde"] }
rs-fsrs = "1.2.0"
js-sys = "0.3"
futures-util = "0.3"
wasm-bindgen-futures = { version = "0.4", features = ["futures-core-03-stream"] }
chrono = "0.4"

[dependencies.web-sys]
version = "0.3.72"
features = [
  "Document",
  "Element",
  "DomException",
  "EventSource",
  "Window",
  "ErrorEvent",
  "Navigator",
  "NodeList",
  "HtmlButtonElement",
  "HtmlDivElement",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlTimeElement",
  "IdbFactory",
  "IdbOpenDbRequest",
  "IdbOpenDbOptions",
  "IdbDatabase",
  "IdbKeyRange",
  "IdbCursor",
  "IdbCursorWithValue",
  "IdbIndex",
  "IdbRequest",
  "IdbTransaction",
  "IdbObjectStore",
  "IdbObjectStoreParameters",
  "IdbTransactionMode",
  "MessageEvent",
  "Worker",
  "WorkerOptions",
  "WorkerType",
  "DedicatedWorkerGlobalScope",
  "ServiceWorker",
  "ServiceWorkerContainer",
  "Response",
  "ReadableStream",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
